# WorkMirror

./: .gitignore  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  streak.rs
src-tauri/src/ai/: analyzer.rs  mod.rs  ollama_client.rs
src-tauri/src/db/: database.rs  mod.rs
src-tauri/src/reporter/: mod.rs  report_generator.rs
src-tauri/src/security/: crypto.rs  mod.rs
src-tauri/src/tracker/: mod.rs  window_tracker.rs
src-tauri/templates/: weekly_report.hbs
src/pages/: Dashboard.tsx  Details.tsx  Growth.tsx  ReminderToast.tsx  Report.tsx  Settings.tsx
