[package]
name = "workmirror"
version = "0.1.0"
description = "WorkMirror - Activity tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "workmirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
handlebars = "5"
printpdf = "0.7"
keyring = "3"
hex = "0.4"
dirs = "5"
dashmap = "5"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
active-win-pos-rs = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
